--- a/convert_weights.ipynb
+++ b/convert_weights.ipynb
@@ -58,10 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'txt'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"pop/dfg.abc.txt\"\n",
+    "a.split(\".\")[-1]"
+   ]
   }
  ],
  "metadata": {
