--- a/app/pkg/ml/usage_examples/autoset.ipynb
+++ b/app/pkg/ml/usage_examples/autoset.ipynb
@@ -67,7 +67,9 @@
     "from app.pkg.ml.buffer_converters import BytesConverter\n",
     "from PIL import Image\n",
     "from app.pkg.models.app.image_category import ImageCategory\n",
+    "import random\n",
     "bc = BytesConverter()\n",
+    "\n",
     "\n",
     "DATA_PATH = \"/usr/src/app/data\"\n",
     "def read_clothes(sub_folder):\n",
@@ -92,7 +94,7 @@
     "        image = Image.open(i)\n",
     "        im_no_back = cp.model_background(image)\n",
     "        im_bytes = bc.image_to_bytes(im_no_back)\n",
-    "        res.append({'cloth':im_bytes, 'category':category})\n",
+    "        res.append({'cloth':im_bytes, 'category':category, \"clothes_id\":random.randint(0, 9999)})\n",
     "    return res\n",
     "\n",
     "def convert_user_to_dict(x):\n",
@@ -101,7 +103,7 @@
     "        image = Image.open(i)\n",
     "        im_no_back = cp.model_background(image)\n",
     "        im_bytes = bc.image_to_bytes(im_no_back)\n",
-    "        res.append({'image':im_bytes})\n",
+    "        res.append({'image':im_bytes,})\n",
     "    return res\n",
     "\n",
     "#        im_white_back = cp.model_background.replace_background_RGBA(im_no_back)\n",
@@ -118,6 +120,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upper_clothes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -126,7 +137,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=517x1296>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,245 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class LocalRecSys:\n",
-    "#     \"\"\"\n",
-    "#     Recommends set of clothes (outfit)\n",
-    "#     \"\"\"\n",
-    "#     def __init__(self, device=\"cuda:0\"):\n",
-    "#         self.model = CLIPModel.from_pretrained(\"openai/clip-vit-base-patch32\").to(device)\n",
-    "#         self.processor = AutoProcessor.from_pretrained(\"openai/clip-vit-base-patch32\")\n",
-    "#         self.tokenizer =  AutoTokenizer.from_pretrained(\"openai/clip-vit-base-patch32\")\n",
-    "#         self.softmax = torch.nn.Softmax(dim=0)\n",
-    "        \n",
-    "\n",
-    "#         self.device = device\n",
-    "#         self.bytes_converter = BytesConverter()\n",
-    "\n",
-    "#     def forward(self,\n",
-    "#                 upper_clothes: List[Dict[str, io.BytesIO]] = [],\n",
-    "#                 lower_clothes: List[Dict[str, io.BytesIO]] = [],\n",
-    "#                 dresses_clothes: List[Dict[str, io.BytesIO]] = [],\n",
-    "#                 outerwear_clothes: List[Dict[str, io.BytesIO]] = [],\n",
-    "                \n",
-    "#                 # user_photos:List[Dict[str, io.BytesIO]],\n",
-    "#                 prompt: str = None,\n",
-    "#                 sample_amount: int = 10,\n",
-    "#                ) -> Dict[str, Dict[str, float]]:\n",
-    "#         \"\"\"\n",
-    "#         Gets probability for each tag\n",
-    "        \n",
-    "#         Args:\n",
-    "#             upper_clothes: List[Dict[str, io.BytesIO]],\n",
-    "#             lower_clothes: List[Dict[str, io.BytesIO]],\n",
-    "#             dresses_clothes: List[Dict[str, io.BytesIO]],\n",
-    "#             prompt: str = None - extra prompt to search\n",
-    "#             sample_amount: int = 10 - samples of outfits  \n",
-    "#         Returns:\n",
-    "#             dict with sets of clothes\n",
-    "        \n",
-    "#         Return example:\n",
-    "#         [\n",
-    "#             {\n",
-    "#             \"score\":1,\n",
-    "#             \"clothes\":[,]\n",
-    "#             },\n",
-    "#             {\n",
-    "#             \"score\":0.93,\n",
-    "#             \"clothes\":[,]\n",
-    "#             },\n",
-    "#         ]\n",
-    "#         \"\"\"\n",
-    "\n",
-    "#         upper_clothes = self.get_embs_per_category(upper_clothes)\n",
-    "#         lower_clothes = self.get_embs_per_category(lower_clothes)\n",
-    "#         dresses_clothes = self.get_embs_per_category(dresses_clothes)\n",
-    "#         outerwear_clothes = self.get_embs_per_category(outerwear_clothes)\n",
-    "\n",
-    "\n",
-    "#         if prompt:\n",
-    "#             prompt_features = self._get_text_embedding(prompt)\n",
-    "#         else:\n",
-    "#             prompt_features = None\n",
-    "\n",
-    "#         # перебор все возможных комбинаций одежды\n",
-    "#         outfits = []\n",
-    "#         for up_cloth in upper_clothes:\n",
-    "#             for low_cloth in lower_clothes:\n",
-    "#                 for outer_wear_cloth in [*outerwear_clothes, None]:\n",
-    "#                     outfit = {'clothes':[up_cloth, low_cloth]}\n",
-    "#                     if outer_wear_cloth is not None:\n",
-    "#                       outfit['clothes'].append(outer_wear_cloth)  \n",
-    "#                     self._evaluate_outfit(outfit=outfit,\n",
-    "#                         prompt_features=prompt_features)\n",
-    "#                     outfits.append(outfit)\n",
-    "                \n",
-    "#         for dress in dresses_clothes:\n",
-    "         \n",
-    "#                 outfit = {'clothes':[dress]}\n",
-    "#                 self._evaluate_outfit(outfit=outfit,\n",
-    "#                     prompt_features=prompt_features)\n",
-    "\n",
-    "#                 outfits.append(outfit)\n",
-    "\n",
-    "#         for cloth in [*upper_clothes, *lower_clothes, *dresses_clothes, *outerwear_clothes]:\n",
-    "#             del cloth['tensor']\n",
-    "\n",
-    "#         sorted_outfits = sorted(outfits, key=lambda x: x['score'], reverse=True)\n",
-    "#         return self.sample_outfit(sorted_outfits, sample_amount)\n",
-    "\n",
-    "#     def _evaluate_outfit(self, outfit, prompt_features):\n",
-    "#         score_list = [cloth['tensor'] for cloth in outfit['clothes']]\n",
-    "\n",
-    "#         if prompt_features is not None:\n",
-    "#             prompt_correlations = [(prompt_features@score).item() for score in score_list]\n",
-    "#         else:\n",
-    "#             prompt_correlations=[0]\n",
-    "\n",
-    "#         if len(outfit['clothes']) > 1:\n",
-    "#             clothes_score = self.dot_product(*score_list).item()/len(outfit['clothes'])\n",
-    "#         else:\n",
-    "#             clothes_score = 0\n",
-    "\n",
-    "#         outfit['score'] = 25 * np.mean(prompt_correlations) + clothes_score\n",
-    "#         outfit['clothes_score'] = clothes_score\n",
-    "#         outfit['prompt_corr'] = np.mean(prompt_correlations)\n",
-    "        \n",
-    "#     def get_embs_per_category(self, clothes:List[Dict[str, io.BytesIO]]):\n",
-    "#         clothes = self.prepare_clothes(clothes)\n",
-    "#         pil_clothes = [cloth['cloth'] for cloth in clothes]\n",
-    "#         image_features = self._get_images_embedding(pil_clothes)\n",
-    "#         for cloth, tensor in zip(clothes, image_features):\n",
-    "#             cloth['tensor'] = tensor\n",
-    "#         return clothes\n",
-    "\n",
-    "\n",
-    "#     def prepare_clothes(self, clothes: list):\n",
-    "#         new_clothes = []      \n",
-    "#         for cloth in clothes:\n",
-    "#             new_cloth = {}\n",
-    "#             cloth_no_background = self.bytes_converter.bytes_to_image(cloth['cloth'])\n",
-    "#             white_background_cloth = ClothPreprocessor.replace_background_RGBA(\n",
-    "#                                                         cloth_no_background,\n",
-    "#                                                         color=(255,255,255)\n",
-    "#                                                         )\n",
-    "#             new_cloth['cloth'] = white_background_cloth\n",
-    "#             new_clothes.append(new_cloth)\n",
-    "#         return new_clothes            \n",
-    "\n",
-    "\n",
-    "#     @torch.inference_mode()\n",
-    "#     def _get_text_embedding(self, text:str ) -> torch.tensor:\n",
-    "#         \"\"\"\n",
-    "#         Gets images embeddings\n",
-    "        \n",
-    "#         Args:\n",
-    "#             images:List[Dict[str, Image]] - images to get embeddings\n",
-    "            \n",
-    "#         Returns:\n",
-    "#             original dict but with embeddings\n",
-    "#         \"\"\"\n",
-    "\n",
-    "#         if len(text) == 0:\n",
-    "#             raise ValueError(\"Got empty text\")\n",
-    "\n",
-    "#         text_inputs = self.tokenizer(text, padding=True, return_tensors=\"pt\")\n",
-    "#         self._input_to_device(text_inputs)\n",
-    "\n",
-    "#         text_features = self.model.get_text_features(**text_inputs)\n",
-    "\n",
-    "#         return text_features\n",
-    "\n",
-    "\n",
-    "#     @torch.inference_mode()\n",
-    "#     def _get_images_embedding(self, images:List[Image.Image] ) \\\n",
-    "#                                 ->List[Dict[str, Union[Image.Image, torch.tensor]]]:\n",
-    "#         \"\"\"\n",
-    "#         Gets images embeddings\n",
-    "        \n",
-    "#         Args:\n",
-    "#             images:List[Dict[str, Image]] - images to get embeddings\n",
-    "            \n",
-    "#         Returns:\n",
-    "#             original dict but with embeddings\n",
-    "#         \"\"\"\n",
-    "\n",
-    "#         if len(images) == 0:\n",
-    "#             return []\n",
-    "\n",
-    "#         image_inputs = self.processor(images=images, return_tensors=\"pt\")\n",
-    "#         self._input_to_device(image_inputs)\n",
-    "\n",
-    "#         image_features = self.model.get_image_features(**image_inputs)\n",
-    "\n",
-    "#         return image_features\n",
-    "\n",
-    "#     def sample_outfit(self, outfits, sample_amount):\n",
-    "\n",
-    "#         scores =torch.tensor([outfit['score']/30 for outfit in outfits])\n",
-    "#         normalized_scores = self.softmax(scores)\n",
-    "\n",
-    "#         top_p_scores = None\n",
-    "#         top_p_index = None\n",
-    "#         top_p = 0.9\n",
-    "#         for i, score in enumerate(normalized_scores):\n",
-    "#             if normalized_scores[:i].sum() > top_p:\n",
-    "#                 top_p_scores = normalized_scores[:i]\n",
-    "#                 top_p_index = i\n",
-    "#                 break\n",
-    "\n",
-    "#         new_scores = sum_normalize(top_p_scores)\n",
-    "\n",
-    "#         indexes = np.arange(len(outfits))\n",
-    "#         sampled_indexes = np.random.choice(indexes,(sample_amount,), p=new_scores ,replace=False)\n",
-    "#         filtered_outfit = [outfits[i] for i in sampled_indexes]\n",
-    "#         return filtered_outfit\n",
-    "\n",
-    "#     def _input_to_device(self, input_data:dict):\n",
-    "#         \"\"\"\n",
-    "#         Converts input dict values to device\n",
-    "#         \"\"\"\n",
-    "#         for key, value in input_data.items():\n",
-    "#             if isinstance(value, torch.Tensor):\n",
-    "#                 input_data[key] = value.to(self.device)\n",
-    "\n",
-    "#     @staticmethod\n",
-    "#     def dot_product(*args: List[torch.tensor]):\n",
-    "\n",
-    "#         num = 1\n",
-    "#         for i in args:\n",
-    "#             if i is not None:\n",
-    "#                 num *= i.flatten()\n",
-    "#         return num.sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lrs = LocalRecSys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outfits = lrs.forward(upper_clothes=upper_clothes,\n",
-    "            lower_clothes=lower_clothes,\n",
-    "            dresses_clothes=dress_clothes,\n",
-    "            outerwear_clothes=outerwear_clothes,\n",
-    "            prompt = 'clothes for gym',# 'clothes for cinema', # \"clothes for theatre\",#\"beachwear\",#\"clothes for beach\", #\"party clothes\", #\n",
-    "#            top_n=100\n",
-    "            sample_amount=10\n",
-    "            )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -416,48 +192,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0.5* LocalRecSys.sigmoid(64)"
+    "lrs = LocalRecSys(return_cloth_fields = [\"clothes_id\"])\n",
+    "\n",
+    "# score не возвращается, т.к это уже часть outfit. return_cloth_fields - для"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfits = lrs.forward(upper_clothes=upper_clothes,\n",
+    "            lower_clothes=lower_clothes,\n",
+    "            dresses_clothes=dress_clothes,\n",
+    "           # outerwear_clothes=outerwear_clothes,\n",
+    "            prompt = None,#'beachwear',# 'clothes for cinema', # \"clothes for theatre\",#\"beachwear\",#\"clothes for beach\", #\"party clothes\", #\n",
+    "\n",
+    "            sample_amount=10\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0750, 0.1042, 0.0389, 0.2147, 0.0398, 0.0882, 0.2050, 0.1341, 0.0201],\n",
-       "       dtype=torch.float64)"
+       "[{'clothes': [{'clothes_id': 2671}, {'clothes_id': 3252}]},\n",
+       " {'clothes': [{'clothes_id': 5642}, {'clothes_id': 6}]},\n",
+       " {'clothes': [{'clothes_id': 5674}, {'clothes_id': 6062}]},\n",
+       " {'clothes': [{'clothes_id': 5642}, {'clothes_id': 6062}]},\n",
+       " {'clothes': [{'clothes_id': 6195}, {'clothes_id': 6}]},\n",
+       " {'clothes': [{'clothes_id': 2879}, {'clothes_id': 6062}]},\n",
+       " {'clothes': [{'clothes_id': 2998}, {'clothes_id': 6}]},\n",
+       " {'clothes': [{'clothes_id': 2671}, {'clothes_id': 6062}]},\n",
+       " {'clothes': [{'clothes_id': 9143}, {'clothes_id': 6}]},\n",
+       " {'clothes': [{'clothes_id': 2998}, {'clothes_id': 3252}]}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sf = torch.nn.Softmax(dim=0)\n",
-    "\n",
-    "scores =torch.tensor([outfit['score']/30 for outfit in outfits])\n",
-    "normalized_scores = sf(scores)\n",
-    "\n",
-    "top_p_scores = None\n",
-    "top_p_index = None\n",
-    "top_p = 0.9\n",
-    "for i, score in enumerate(normalized_scores):\n",
-    "    if normalized_scores[:i].sum() > top_p:\n",
-    "        top_p_scores = normalized_scores[:i]\n",
-    "        top_p_index = i\n",
-    "        break\n",
-    "top_p_scores"
+    "outfits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# sf = torch.nn.Softmax(dim=0)\n",
+    "\n",
+    "# scores =torch.tensor([outfit['score']/30 for outfit in outfits])\n",
+    "# normalized_scores = sf(scores)\n",
+    "\n",
+    "# top_p_scores = None\n",
+    "# top_p_index = None\n",
+    "# top_p = 0.9\n",
+    "# for i, score in enumerate(normalized_scores):\n",
+    "#     if normalized_scores[:i].sum() > top_p:\n",
+    "#         top_p_scores = normalized_scores[:i]\n",
+    "#         top_p_index = i\n",
+    "#         break\n",
+    "# top_p_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'top_p_index' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 24\u001b[0m\n\u001b[1;32m     20\u001b[0m             axs[i, j]\u001b[38;5;241m.\u001b[39mimshow(cloth[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcloth\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m#    axs[1, 1].scatter(x, y)\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[43mplot_outfits\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutfits\u001b[49m\u001b[43m)\u001b[49m    \n",
+      "Cell \u001b[0;32mIn[13], line 4\u001b[0m, in \u001b[0;36mplot_outfits\u001b[0;34m(outfits_)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplot_outfits\u001b[39m(outfits_):\n\u001b[0;32m----> 4\u001b[0m     outfits \u001b[38;5;241m=\u001b[39m outfits_[:\u001b[43mtop_p_index\u001b[49m]\n\u001b[1;32m      6\u001b[0m     fig, axs \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;28mlen\u001b[39m(outfits), \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, outfit \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(outfits):\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;66;03m#title =  * 3\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'top_p_index' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "plt.rcParams[\"figure.figsize\"] = (20,70)\n",
