autoset examples modified

--- a/app/pkg/ml/usage_examples/test_rm_back.ipynb
+++ b/app/pkg/ml/usage_examples/test_rm_back.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'app' from '/usr/src/app/app/__init__.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -27,9 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from app.pkg.ml.try_on.preprocessing.aggregator import ClothProcessor\n",
     "cp = ClothProcessor()"
@@ -37,9 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/transformers/utils/hub.py:124: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from app.pkg.ml.auto_clothing_set.autoset import LocalRecSys\n",
@@ -105,42 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'SamModel' from 'transformers' (/usr/local/lib/python3.10/dist-packages/transformers/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SamModel, SamProcessor\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m SamModel\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnielsr/slimsam-50-uniform\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m processor \u001b[38;5;241m=\u001b[39m SamProcessor\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnielsr/slimsam-50-uniform\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SamModel' from 'transformers' (/usr/local/lib/python3.10/dist-packages/transformers/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import requests\n",
     "from transformers import SamModel, SamProcessor\n",
     "\n",
-    "model = SamModel.from_pretrained(\"nielsr/slimsam-50-uniform\")\n",
-    "processor = SamProcessor.from_pretrained(\"nielsr/slimsam-50-uniform\")\n",
+    "model = SamModel.from_pretrained(\"nielsr/slimsam-77-uniform\").to(\"cuda:0\")\n",
+    "processor = SamProcessor.from_pretrained(\"nielsr/slimsam-77-uniform\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +157,38 @@
     "raw_image = Image.open(requests.get(img_url, stream=True).raw).convert(\"RGB\")\n",
     "input_points = [[[450, 600]]] # 2D localization of a window\n",
     "\n",
-    "inputs = processor(raw_image, input_points=input_points, return_tensors=\"pt\").to(\"cuda\")\n",
-    "outputs = model(**inputs)\n",
+    "def get_im_with_mask()\n",
+    "    inputs = processor(raw_image, input_points=input_points, return_tensors=\"pt\").to(\"cuda\")\n",
+    "    outputs = model(**inputs)\n",
     "\n",
-    "masks = processor.image_processor.post_process_masks(outputs.pred_masks.cpu(), inputs[\"original_sizes\"].cpu(), inputs[\"reshaped_input_sizes\"].cpu())\n",
-    "scores = outputs.iou_scores"
+    "    masks = processor.image_processor.post_process_masks(outputs.pred_masks.cpu(), inputs[\"original_sizes\"].cpu(), inputs[\"reshaped_input_sizes\"].cpu())\n",
+    "    scores = outputs.iou_scores\n",
+    "    from PIL import Image\n",
+    "    import torch\n",
+    "    import torchvision.transforms as transforms\n",
+    "\n",
+    "    # Загрузка изображения с помощью PIL\n",
+    "    image = raw_image\n",
+    "\n",
+    "    # Преобразование изображения PIL в тензор PyTorch\n",
+    "    transform = transforms.ToTensor()\n",
+    "    tensor_image = transform(image)\n",
+    "\n",
+    "    # Создание маски в формате torch.Tensor\n",
+    "    #mask = torch.ones_like(tensor_image)[:, :, 0]  # Создание маски для канала красного\n",
+    "    print(masks[0].shape)\n",
+    "    mask = masks[0][0]#.unsqueeze(2)  # Добавление размерности для канала\n",
+    "\n",
+    "    # Применение маски к изображению\n",
+    "    masked_image = tensor_image \n",
+    "    #+ mask * 0.5  # Умножение на 0.5 для получения полупрозрачности\n",
+    "    masked_image[mask] = 255\n",
+    "    # Преобразование обратно в изображение PIL\n",
+    "    masked_image = transforms.ToPILImage()(masked_image)\n",
+    "\n",
+    "    # Сохранение результирующего изображения\n",
+    "    masked_image#.save('masked_image.jpg')\n",
+    "    "
    ]
   },
   {
