--- a/app/pkg/ml/usage_examples/test_rm_back.ipynb
+++ b/app/pkg/ml/usage_examples/test_rm_back.ipynb
@@ -90,10 +90,10 @@
     "    return abs_im_path\n",
     "\n",
     "\n",
-    "outerwear_clothes_paths = read_clothes(\"outerwear\") # [\"/usr/src/app/data/upper/b_bloose.png\", \"/usr/src/app/data/upper/b_jacket.png\"]\n",
-    "upper_clothes_paths = read_clothes(\"upper\") # [ \"/usr/src/app/data/upper/t-shirt-blue.png\",\"/usr/src/app/data/upper/t-shirt-miami.png\", \"/usr/src/app/data/upper/b_t-shirt-2.png\", \"/usr/src/app/data/upper/b_t-shirt-3.png\", \"/usr/src/app/data/upper/t-shirt-dc.png\", \"/usr/src/app/data/upper/t-shirt-dc2.png\", \"/usr/src/app/data/upper/t-shirt.png\" ]\n",
-    "lower_clothes_paths = read_clothes(\"lower\")  # [\"/usr/src/app/data/lower/b_black_jeans.png\", \"/usr/src/app/data/lower/b_shorts.png\", \"/usr/src/app/data/lower/jeans-dc.png\", \"/usr/src/app/data/lower/shorts-dc.png\" ]\n",
-    "dress_clothes_paths = read_clothes(\"dresses\") # [\"/usr/src/app/data/dresses/1.png\", \"/usr/src/app/data/dresses/2.png\", \"/usr/src/app/data/dresses/dress-dc.png\"]\n",
+    "outerwear_clothes_paths = read_clothes(\"outerwear\") \n",
+    "upper_clothes_paths = read_clothes(\"upper\") \n",
+    "lower_clothes_paths = read_clothes(\"lower\") \n",
+    "dress_clothes_paths = read_clothes(\"dresses\")\n",
     "\n",
     "user_images = [f\"{DATA_PATH}/human/brayan_krenston.png\"]\n",
     "\n",
@@ -141,10 +141,13 @@
     "from PIL import Image\n",
     "import requests\n",
     "from transformers import SamModel, SamProcessor\n",
+    "from transformers import SegformerImageProcessor, AutoModelForSemanticSegmentation\n",
     "\n",
-    "model = SamModel.from_pretrained(\"nielsr/slimsam-77-uniform\").to(\"cuda:0\")\n",
-    "processor = SamProcessor.from_pretrained(\"nielsr/slimsam-77-uniform\")\n",
-    "\n"
+    "# model = SamModel.from_pretrained(\"nielsr/slimsam-77-uniform\").to(\"cuda:0\")\n",
+    "# processor = SamProcessor.from_pretrained(\"nielsr/slimsam-77-uniform\")\n",
+    "\n",
+    "processor = SegformerImageProcessor.from_pretrained(\"sayeed99/segformer_b3_clothes\")\n",
+    "model = AutoModelForSemanticSegmentation.from_pretrained(\"sayeed99/segformer_b3_clothes\").to(\"cuda:0\")\n"
    ]
   },
   {
@@ -153,42 +156,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_url = \"https://huggingface.co/ybelkada/segment-anything/resolve/main/assets/car.png\"\n",
-    "raw_image = Image.open(requests.get(img_url, stream=True).raw).convert(\"RGB\")\n",
-    "input_points = [[[450, 600]]] # 2D localization of a window\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "def change_contrast(img, level):\n",
+    "    factor = (259 * (level + 255)) / (255 * (259 - level))\n",
+    "    def contrast(c):\n",
+    "        return 128 + factor * (c - 128)\n",
+    "    return img.point(contrast)\n",
     "\n",
-    "def get_im_with_mask()\n",
-    "    inputs = processor(raw_image, input_points=input_points, return_tensors=\"pt\").to(\"cuda\")\n",
-    "    outputs = model(**inputs)\n",
+    "def get_im_with_mask(pil_im:Image.Image):\n",
+    "        # new_contr = change_contrast(pil_im.convert('RGB'), 50)\n",
+    "        image = np.array(pil_im.convert('RGB'))\n",
     "\n",
-    "    masks = processor.image_processor.post_process_masks(outputs.pred_masks.cpu(), inputs[\"original_sizes\"].cpu(), inputs[\"reshaped_input_sizes\"].cpu())\n",
-    "    scores = outputs.iou_scores\n",
-    "    from PIL import Image\n",
-    "    import torch\n",
-    "    import torchvision.transforms as transforms\n",
+    "#        print(image.shape)\n",
+    "        # convert('RGB') is for images with h,w,4 shape\n",
+    "        \n",
     "\n",
-    "    # Загрузка изображения с помощью PIL\n",
-    "    image = raw_image\n",
+    "        inputs = processor(image, return_tensors=\"pt\").to(\"cuda\")\n",
+    "        with torch.no_grad(): \n",
+    "            outputs = model(**inputs)\n",
+    "            logits = outputs.logits.cpu()\n",
     "\n",
-    "    # Преобразование изображения PIL в тензор PyTorch\n",
-    "    transform = transforms.ToTensor()\n",
-    "    tensor_image = transform(image)\n",
+    "            upsampled_logits = nn.functional.interpolate(\n",
+    "                logits,\n",
+    "                size=pil_im.size[::-1],\n",
+    "                mode=\"bilinear\",\n",
+    "                align_corners=False,\n",
+    "            )\n",
     "\n",
-    "    # Создание маски в формате torch.Tensor\n",
-    "    #mask = torch.ones_like(tensor_image)[:, :, 0]  # Создание маски для канала красного\n",
-    "    print(masks[0].shape)\n",
-    "    mask = masks[0][0]#.unsqueeze(2)  # Добавление размерности для канала\n",
+    "            pred_seg = upsampled_logits.argmax(dim=1)[0]\n",
     "\n",
-    "    # Применение маски к изображению\n",
-    "    masked_image = tensor_image \n",
-    "    #+ mask * 0.5  # Умножение на 0.5 для получения полупрозрачности\n",
-    "    masked_image[mask] = 255\n",
-    "    # Преобразование обратно в изображение PIL\n",
-    "    masked_image = transforms.ToPILImage()(masked_image)\n",
+    "            cloth_mask = pred_seg!=0\n",
+    "            #masks = processor.image_processor.post_process_masks(outputs.pred_masks.cpu(), inputs[\"original_sizes\"].cpu(), inputs[\"reshaped_input_sizes\"].cpu())\n",
+    "            \n",
+    "            del inputs\n",
+    "            del outputs\n",
     "\n",
-    "    # Сохранение результирующего изображения\n",
-    "    masked_image#.save('masked_image.jpg')\n",
-    "    "
+    "        mask = cloth_mask\n",
+    "\n",
+    "        pil_im = Image.fromarray(mask.numpy())\n",
+    "\n",
+    "        # if background_color:\n",
+    "        #     no_bg_image = Image.new(\"RGB\", pil_im.size, background_color)\n",
+    "            \n",
+    "        \n",
+    "        no_bg_image = Image.new(\"RGBA\", pil_im.size, (0, 0 ,0 ,0))\n",
+    "\n",
+    "        orig_image = Image.fromarray(image[:,:,:])\n",
+    "\n",
+    "        no_bg_image.paste(orig_image, mask=pil_im)\n",
+    "        result = no_bg_image\n",
+    "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uppers_no_back = [get_im_with_mask(im) for im in upper_clothes ]\n",
+    "# lowers_no_back = [get_im_with_mask(im) for im in lower_clothes ]\n",
+    "# outerwear_no_back = [get_im_with_mask(im) for im in outerwear_clothes ]\n",
+    "# dresses_no_back = [get_im_with_mask(im) for im in dress_clothes ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in [*uppers_no_back, *lowers_no_back, *outerwear_no_back, *dresses_no_back]:\n",
+    "#     i.show()"
    ]
   },
   {
