--- a/app/pkg/ml/usage_examples/test_rm_back.ipynb
+++ b/app/pkg/ml/usage_examples/test_rm_back.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'app' from '/usr/src/app/app/__init__.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,18 @@
    "source": [
     "from app.pkg.ml.try_on.preprocessing.aggregator import ClothProcessor\n",
     "cp = ClothProcessor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "image = Image.open(\"/usr/src/app/data/etc/1.png\")\n",
+    "im_no_back = cp.model_background(image)\n",
+    "im_no_back.save(\"/usr/src/app/data/etc/1__.png\")"
    ]
   },
   {
