change recsystems interaction

--- a/app/pkg/ml/usage_examples/recsys.ipynb
+++ b/app/pkg/ml/usage_examples/recsys.ipynb
@@ -127,12 +127,25 @@
         "from app.pkg.ml.buffer_converters import BytesConverter\n",
         "bc = BytesConverter()\n",
         "\n",
-        "outfits = [{'user_id':i%5,'outfit_id':i, 'tensor':bc.torch_to_bytes(emb)} for i, emb in enumerate(users_data)]\n",
-        "user_outfits = [{'user_id':i%5, 'outfit_id':i, 'tensor':bc.torch_to_bytes(emb)} for i, emb in enumerate(user_data)]\n",
+        "clothes = user_data[:100]\n",
+        "def gen_clothes_id():\n",
+        "    cl_amount = np.random.randint(1, 4)\n",
+        "    return [np.random.randint(0, len(clothes))\n",
+        "            for _ in range(cl_amount)]\n",
+        "\n",
+        "\n",
+        "cl_id_to_bytes = dict(zip(range(len(clothes)),\n",
+        "        [bc.torch_to_bytes(cloth) for cloth in torch.tensor(clothes)]))\n",
+        "# dict.fromkeys(list(range(len(clothes))),\n",
+        "#                                [bc.torch_to_bytes(cloth) for cloth in clothes])\n",
+        "\n",
+        "outfits = [{'user_id':i%5,'outfit_id':i, 'clothes':gen_clothes_id()} for i, emb in enumerate(users_data)]\n",
+        "# user_outfits = [{'user_id':i%5, 'outfit_id':i, 'tensor':bc.torch_to_bytes(emb)} for i, emb in enumerate(user_data)]\n",
         "\n",
         "#### ONLY FOR TEST\n",
         "\n",
-        "rec.update_global_outfits(outfits)\n"
+        "rec.update_global_outfits_from_bytes(outfits, cloth_id_to_bytes=cl_id_to_bytes)\n",
+        "cl_id_to_bytes"
       ]
     },
     {
@@ -142,7 +155,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "recomends_ids = rec.recommend_from_bytes(user_outfits)\n",
+        "recomends_ids = rec.recommend(2)\n",
         "recomends_ids\n"
       ]
     },
@@ -221,7 +234,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.1.undefined"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
