update autoset example

--- a/app/pkg/ml/usage_examples/autoset.ipynb
+++ b/app/pkg/ml/usage_examples/autoset.ipynb
@@ -60,8 +60,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from app.pkg.ml.auto_clothing_set.autoset import LocalRecSys\n",
+    "lrs = LocalRecSys(return_cloth_fields=[\"clothes_id\",])\n",
+    "# score не возвращается, т.к это уже часть outfit. return_cloth_fields - для"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
     "\n",
     "from app.pkg.ml.buffer_converters import BytesConverter\n",
     "from PIL import Image\n",
@@ -93,7 +104,12 @@
     "        image = Image.open(i)\n",
     "        im_no_back = cp.model_background(image)\n",
     "        im_bytes = bc.image_to_bytes(im_no_back)\n",
-    "        res.append({'cloth':im_bytes, 'category':category, \"clothes_id\":random.randint(0, 9999)})\n",
+    "        im_tensor_bytes = lrs.get_embs_for_clothes([{'cloth':im_bytes}])[0]['tensor']\n",
+    "        # im_tensor_bytes = bc.torch_to_bytes(im_tensor)\n",
+    "        res.append({'cloth':im_bytes,\n",
+    "                    'category':category,\n",
+    "                    \"tensor\":im_tensor_bytes,\n",
+    "                    \"clothes_id\":random.randint(0, 9999)})\n",
     "    return res\n",
     "\n",
     "def convert_user_to_dict(x):\n",
@@ -108,11 +124,11 @@
     "#        im_white_back = cp.model_background.replace_background_RGBA(im_no_back)\n",
     "\n",
     "\n",
-    "upper_clothes = convert_cloth_to_dict(upper_clothes_paths, ImageCategory.UPPER_BODY)\n",
-    "lower_clothes = convert_cloth_to_dict(lower_clothes_paths, ImageCategory.LOWER_BODY)\n",
-    "dress_clothes = convert_cloth_to_dict(dress_clothes_paths, ImageCategory.DRESSES)\n",
-    "outerwear_clothes = convert_cloth_to_dict(outerwear_clothes_paths, ImageCategory.UPPER_BODY)\n",
-    "user_images = convert_user_to_dict(user_images)\n"
+    "upper_clothes = convert_cloth_to_dict(upper_clothes_paths[:2], ImageCategory.UPPER_BODY)\n",
+    "lower_clothes = convert_cloth_to_dict(lower_clothes_paths[:2], ImageCategory.LOWER_BODY)\n",
+    "dress_clothes = convert_cloth_to_dict(dress_clothes_paths[:2], ImageCategory.DRESSES)\n",
+    "outerwear_clothes = convert_cloth_to_dict(outerwear_clothes_paths[:2], ImageCategory.UPPER_BODY)\n",
+    "user_images = convert_user_to_dict(user_images[:2])\n"
    ]
   },
   {
@@ -169,10 +185,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "lrs = LocalRecSys(return_cloth_fields=[\"clothes_id\", 'cloth'])\n",
-    "# score не возвращается, т.к это уже часть outfit. return_cloth_fields - для"
+    "# import time\n",
+    "\n",
+    "# start_time = time.time()\n",
+    "# t = lrs.get_embs_for_clothes(upper_clothes[5:6])[0]['tensor']\n",
+    "# print(f\"Time to get embs {time.time()-start_time} seconds\")\n",
+    "# tb = bc.torch_to_bytes(t)\n",
+    "# with open(\"volume/test1.txt\", 'wb') as f:\n",
+    "#     f.write(tb.getbuffer())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -194,13 +230,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lower_clothes[3]['tensor'].seek(0)\n",
+    "tb = lower_clothes[0]['tensor']\n",
+    "# bc.bytes_to_torch(bc.bytes_to_torch(tb))\n",
+    "#.shape #torch.load(tb)\n",
+    "# upper_clothes[2]['tensor']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outfits = lrs.forward(\n",
     "            upper_clothes=upper_clothes[:],\n",
     "            lower_clothes=lower_clothes[:],\n",
     "            dresses_clothes=dress_clothes[:],\n",
     "            outerwear_clothes=outerwear_clothes[:],\n",
     "            prompt = \"\",#'beachwear',# 'clothes for cinema', # \"clothes for theatre\",#\"beachwear\",#\"clothes for beach\", #\"party clothes\", #\n",
-    "            sample_amount=243\n",
+    "            sample_amount=12\n",
     "            )"
    ]
   },
@@ -210,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfits[0]"
+    "outfits[5]"
    ]
   },
   {
@@ -219,16 +268,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.manifold import TSNE\n",
-    "from sklearn.cluster import KMeans\n",
+    "# import numpy as np\n",
+    "# from sklearn.manifold import TSNE\n",
+    "# from sklearn.cluster import KMeans\n",
     "\n",
-    "X = torch.concatenate([outfit['tensor'].cpu().unsqueeze(0) for outfit in outfits]).numpy()\n",
-    "#np.array([[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
+    "# X = torch.concatenate([bc.bytes_to_torch(outfit['tensor']).cpu().unsqueeze(0) for outfit in outfits]).numpy()\n",
+    "# #np.array([[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
     "\n",
-    "X_embedded = TSNE(n_components=2, learning_rate='auto',\n",
-    "                   init='random', perplexity=3).fit_transform(X)\n",
-    "X_embedded.shape"
+    "# X_embedded = TSNE(n_components=2, learning_rate='auto',\n",
+    "#                    init='random', perplexity=3).fit_transform(X)\n",
+    "# X_embedded.shape"
    ]
   },
   {
@@ -237,18 +286,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "kmeans = KMeans(n_clusters=8, random_state=0)\n",
-    "labels = kmeans.fit_predict(X)\n",
+    "# from matplotlib import pyplot as plt\n",
+    "# kmeans = KMeans(n_clusters=8, random_state=0)\n",
+    "# labels = kmeans.fit_predict(X)\n",
     "\n",
-    "# Plot the data with cluster colors\n",
-    "plt.scatter(X_embedded[:, 0], X_embedded[:, 1], c=labels)\n",
+    "# # Plot the data with cluster colors\n",
+    "# plt.scatter(X_embedded[:, 0], X_embedded[:, 1], c=labels)\n",
     "\n",
-    "plt.xlabel('Feature 1')\n",
-    "plt.ylabel('Feature 2')\n",
-    "plt.title('K-Means Clustering')\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "# plt.xlabel('Feature 1')\n",
+    "# plt.ylabel('Feature 2')\n",
+    "# plt.title('K-Means Clustering')\n",
+    "# plt.grid()\n",
+    "# plt.show()"
    ]
   },
   {
@@ -257,23 +306,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly import express as px\n",
-    "import pandas as pd\n",
+    "# from plotly import express as px\n",
+    "# import pandas as pd\n",
     "\n",
-    "def get_df(data:list, labels):\n",
-    "    return {\n",
-    "     \"x\":data[:,0],\n",
-    "     \"y\":data[:,1],\n",
-    "     \"label\":labels,\n",
-    "     'index':range(len(data))\n",
-    "    #  \"uuid\":[outfit['uuid'] for outfit in data]\n",
-    "     }\n",
+    "# def get_df(data:list, labels):\n",
+    "#     return {\n",
+    "#      \"x\":data[:,0],\n",
+    "#      \"y\":data[:,1],\n",
+    "#      \"label\":labels,\n",
+    "#      'index':range(len(data))\n",
+    "#     #  \"uuid\":[outfit['uuid'] for outfit in data]\n",
+    "#      }\n",
     "\n",
     "\n",
     "\n",
-    "user_df = pd.DataFrame(get_df(X_embedded, kmeans.labels_))\n",
+    "# user_df = pd.DataFrame(get_df(X_embedded, kmeans.labels_))\n",
     "\n",
-    "px.scatter(user_df, x='x', y='y', color='label', hover_data=['index']);\n"
+    "# px.scatter(user_df, x='x', y='y', color='label', hover_data=['index']);\n"
    ]
   },
   {
@@ -336,6 +385,13 @@
     "             x=\"scores\",\n",
     "             kde=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
