[+] Cut SAM release

--- a/app/pkg/ml/usage_examples/test_rm_back.ipynb
+++ b/app/pkg/ml/usage_examples/test_rm_back.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'app' from '/usr/src/app/app/__init__.py'>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -33,31 +22,25 @@
     "    del sys.path[-1]\n",
     "    return module\n",
     "\n",
-    "import_path(\"/usr/src/app/app\")"
+    "import_path(\"/home/boris/Projects/Virtual Wardrobe/app\")\n",
+    "# import_path(\"/usr/src/app/app\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from app.pkg.ml.try_on.preprocessing.aggregator import ClothProcessor\n",
-    "cp = ClothProcessor()"
+    "from app.pkg.ml.try_on.preprocessing.cloth import BackgroundModels\n",
+    "\n",
+    "cp = ClothProcessor(BackgroundModels.BriaRMBG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,18 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/transformers/utils/hub.py:124: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from app.pkg.ml.auto_clothing_set.autoset import LocalRecSys\n",
@@ -146,12 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "import requests\n",
     "from transformers import SamModel, SamProcessor\n",
     "from transformers import SegformerImageProcessor, AutoModelForSemanticSegmentation\n",
     "\n",
@@ -164,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
